--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -176,9 +176,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainHorVer.svg&amp;filetimestamp=20240102154008&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainHorVer.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainHorVer.html" title="Sketcher ConstrainHorVer">Horizont&aacute;ln&iacute;/vertik&aacute;ln&iacute; vazba</a>: V&aacute;&#382;e p&#345;&iacute;mky nebo dvojice bod&#367; tak, aby byly vodorovn&eacute; nebo svisl&eacute;, podle toho, co je bl&iacute;&#382;e aktu&aacute;ln&iacute;mu zarovn&aacute;n&iacute;. Kombinuje n&aacute;stroje <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">Horizont&aacute;ln&iacute; vazba</a> a <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">Vertik&aacute;ln&iacute; vazba</a>. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainHorizontal.svg&amp;filetimestamp=20240101173125&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainHorizontal.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">Horizont&aacute;ln&iacute; vazba</a>: Vazba zaji&scaron;&#357;uje, &#382;e p&#345;&iacute;mky nebo dvojice bod&#367; jsou horizont&aacute;ln&iacute;.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainVertical.svg&amp;filetimestamp=20240101173106&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainVertical.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">Vertik&aacute;ln&iacute; vazba</a>: Vazba zaji&scaron;&#357;uje, &#382;e p&#345;&iacute;mky nebo dvojice bod&#367; jsou vertik&aacute;ln&iacute;.</li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainParallel.svg&amp;filetimestamp=20240101173144&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainParallel.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainParallel.html" title="Sketcher ConstrainParallel">Parallel Constraint</a>: Constrains lines to be parallel.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainParallel.svg&amp;filetimestamp=20240101173144&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainParallel.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainParallel.html" title="Sketcher ConstrainParallel">Vazba rovnob&#283;&#382;nosti</a>: Vynut&iacute;, aby byly linie rovnob&#283;&#382;n&eacute;.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainPerpendicular.svg&amp;filetimestamp=20240101173234&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainPerpendicular.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainPerpendicular.html" title="Sketcher ConstrainPerpendicular">Perpendicular Constraint</a>: Constrains two lines to be perpendicular, or two edges, or an edge and an axis, to be perpendicular at their intersection. The constraint can also connect two edges, forcing them to be perpendicular at the joint.</li></ul>
 </div>
@@ -668,13 +666,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118122834
+Cached time: 20260118122951
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.409 seconds
-Real time usage: 0.494 seconds
-Preprocessor visited node count: 1485/1000000
+CPU time usage: 0.443 seconds
+Real time usage: 0.641 seconds
+Preprocessor visited node count: 1484/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -684,19 +682,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.195      1 -total
- 21.68%    7.630      1 Template:Sketcher_Tools_navi/cs
- 15.36%    5.405      2 Template:Navigation_menu_2
- 13.31%    4.686      1 Template:Userdocnavi/cs
-  9.44%    3.324      1 Template:PropertyView
-  7.32%    2.577      6 Template:Caption
-  7.00%    2.464      2 Template:Docnav
-  6.62%    2.330     34 Template:Version
-  6.32%    2.225      5 Template:MenuCommand
-  5.74%    2.019      1 Template:Variable
+100.00%   35.581      1 -total
+ 25.93%    9.227      1 Template:Sketcher_Tools_navi/cs
+ 14.42%    5.132      8 Template:VersionPlus
+ 14.18%    5.045      2 Template:Navigation_menu_2
+ 11.66%    4.147      1 Template:Userdocnavi/cs
+  8.70%    3.097      1 Template:PropertyView
+  6.57%    2.336     34 Template:Version
+  5.26%    1.871      2 Template:Docnav
+  5.22%    1.859     14 Template:KEY
+  4.01%    1.426      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118122833 and revision id 1740439. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118122950 and revision id 1740443. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
