--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -178,9 +178,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainVertical.svg&amp;filetimestamp=20240101173106&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainVertical.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">Vertik&aacute;ln&iacute; vazba</a>: Vazba zaji&scaron;&#357;uje, &#382;e p&#345;&iacute;mky nebo dvojice bod&#367; jsou vertik&aacute;ln&iacute;.</li></ul></dd></dl>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainParallel.svg&amp;filetimestamp=20240101173144&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainParallel.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainParallel.html" title="Sketcher ConstrainParallel">Vazba rovnob&#283;&#382;nosti</a>: Vynut&iacute;, aby byly linie rovnob&#283;&#382;n&eacute;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainPerpendicular.svg&amp;filetimestamp=20240101173234&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainPerpendicular.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainPerpendicular.html" title="Sketcher ConstrainPerpendicular">Vazba kolmosti</a>: Zaji&scaron;&#357;uje, aby dv&#283; p&#345;&iacute;mky byly kolm&eacute;, nebo aby dv&#283; hrany, nebo hrana a osa, byly kolm&eacute; v m&iacute;st&#283; jejich pr&#367;se&#269;&iacute;ku. Vazba m&#367;&#382;e tak&eacute; spojit dv&#283; hrany a vynutit jejich kolmost v m&iacute;st&#283; spoje.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainTangent.svg&amp;filetimestamp=20240101173249&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainTangent.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainTangent.html" title="Sketcher ConstrainTangent">Tangent/Collinear Constraint</a>: Constrains two edges, or an edge and an axis, to be tangent. The constraint can also connect two edges, forcing them to be tangent at the joint. If two lines are selected they are made collinear.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainTangent.svg&amp;filetimestamp=20240101173249&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainTangent.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainTangent.html" title="Sketcher ConstrainTangent">Vazba te&#269;ny/koline&aacute;rn&iacute;</a>: Zaru&#269;&iacute;, &#382;e dv&#283; hrany nebo hrana a osa budou te&#269;n&eacute;. Omezen&iacute; m&#367;&#382;e tak&eacute; spojit dv&#283; hrany a vynutit jejich te&#269;nost ve spoji. Pokud jsou vybr&aacute;ny dv&#283; p&#345;&iacute;mky, budou koline&aacute;rn&iacute;.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainEqual.svg&amp;filetimestamp=20240101173306&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainEqual.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainEqual.html" title="Sketcher ConstrainEqual">Equal Constraint</a>: Constrains edges to have an equal length (lines) or curvature (other edges except B-splines).</li></ul>
 </div>
@@ -664,13 +662,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118123124
+Cached time: 20260118123309
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.497 seconds
-Real time usage: 2.165 seconds
-Preprocessor visited node count: 1483/1000000
+CPU time usage: 0.473 seconds
+Real time usage: 0.834 seconds
+Preprocessor visited node count: 1482/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -680,19 +678,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  125.772      1 -total
- 24.36%   30.638      1 Template:Sketcher_Tools_navi/cs
- 14.52%   18.267      8 Template:VersionPlus
- 11.40%   14.332      2 Template:Navigation_menu_2
- 10.35%   13.016     14 Template:KEY
-  9.68%   12.178      1 Template:PropertyView
-  8.54%   10.742      1 Template:Userdocnavi/cs
-  8.27%   10.398     34 Template:Version
-  6.29%    7.905      2 Template:Docnav
-  5.97%    7.506      1 Template:Variable
+100.00%   62.596      1 -total
+ 21.92%   13.718      1 Template:Sketcher_Tools_navi/cs
+ 13.49%    8.445      2 Template:Navigation_menu_2
+ 13.20%    8.263      1 Template:Userdocnavi/cs
+ 10.23%    6.405      1 Template:PropertyView
+  7.56%    4.735      6 Template:Caption
+  6.94%    4.346     34 Template:Version
+  6.60%    4.134      5 Template:MenuCommand
+  6.58%    4.120      1 Template:Variable
+  4.90%    3.066      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118123122 and revision id 1740445. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118123308 and revision id 1740447. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
