--- a/wiki/it/Part_Prism.html
+++ b/wiki/it/Part_Prism.html
@@ -1,11 +1,11 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Part Prism/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Part+Prism&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Part_Prism.html" class="mw-pt-progress mw-pt-progress--high" title="Part Prisma (96% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Part_Prism.html" class="mw-pt-progress mw-pt-progress--complete" title="Part Prisma (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Part_Prism.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Part Prism (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/Part_Prism.html" class="mw-pt-progress mw-pt-progress--low" title="Par&ccedil;a Prizma (4% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/Part_Prism.html" class="mw-pt-progress mw-pt-progress--low" title="Part Prisma (12% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/Part_Prism.html" class="mw-pt-progress mw-pt-progress--high" title="Part Prisme (96% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Part_Prism.html" class="mw-pt-progress mw-pt-progress--complete" title="Part Prisme (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
-<li><a href="../pl/Part_Prism.html" class="mw-pt-progress mw-pt-progress--high" title="Cz&#281;&#347;&#263;: Graniastos&#322;up (96% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Part_Prism.html" class="mw-pt-progress mw-pt-progress--complete" title="Cz&#281;&#347;&#263;: Graniastos&#322;up (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Part_Prism.html" class="mw-pt-progress mw-pt-progress--low" title="Prisma (4% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../cs/Part_Prism.html" class="mw-pt-progress mw-pt-progress--low" title="Part Prism (4% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="../ru/Part_Prism.html" class="mw-pt-progress mw-pt-progress--high" title="&#1055;&#1088;&#1080;&#1079;&#1084;&#1072; (92% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
@@ -16,7 +16,6 @@
     <div><a href="../it/Part_Workbench.html" title="Part Workbench/it">Part</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_Part.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -27,7 +26,7 @@
 <th class="ctOdd">Posizione nel menu
 </th></tr>
 <tr>
-<td class="ctEven">Parte &rarr; <a href="../it/Part_Primitives.html" title="Part Primitives/it">Crea primitive</a> &rarr; Prisma
+<td class="ctEven">Parte &rarr; <a href="../it/Part_Primitives.html" title="Part Primitives/it">Primitive</a> &rarr; Prisma
 </td></tr>
 <tr>
 <th class="ctOdd">Ambiente
@@ -56,7 +55,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
@@ -129,13 +127,13 @@
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_Part.svg&amp;filetimestamp=20240712190040&amp;.html" class="mw-file-description"><img src="../File/Workbench_Part.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Part_Workbench.html" title="Part Workbench/it">Part</a>
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
-<ul><li><b>Primitives:</b> <a href="../it/Part_Box.html" title="Part Box/it">Box</a>, <a href="../it/Part_Cylinder.html" title="Part Cylinder/it">Cylinder</a>, <a href="../it/Part_Sphere.html" title="Part Sphere/it">Sphere</a>, <a href="../it/Part_Cone.html" title="Part Cone/it">Cone</a>, <a href="../it/Part_Torus.html" title="Part Torus/it">Torus</a>, <a href="../it/Part_Tube.html" title="Part Tube/it">Tube</a>, <a href="../it/Part_Primitives.html" title="Part Primitives/it">Create primitives</a>, <a href="../it/Part_Builder.html" title="Part Builder/it">Shape builder</a></li></ul>
+<ul><li><b>Primitives:</b> <a href="../it/Part_Box.html" title="Part Box/it">Cube</a>, <a href="../it/Part_Cylinder.html" title="Part Cylinder/it">Cylinder</a>, <a href="../it/Part_Sphere.html" title="Part Sphere/it">Sphere</a>, <a href="../it/Part_Cone.html" title="Part Cone/it">Cone</a>, <a href="../it/Part_Torus.html" title="Part Torus/it">Torus</a>, <a href="../it/Part_Tube.html" title="Part Tube/it">Tube</a>, <a href="../it/Part_Primitives.html" title="Part Primitives/it">Primitive</a>, <a href="../it/Part_Builder.html" title="Part Builder/it">Shape Builder</a></li></ul>
 <hr>
-<ul><li><b>Creation and modification:</b> <a href="../it/Sketcher_NewSketch.html" title="Sketcher NewSketch/it">Create sketch</a>, <a href="../it/Part_Extrude.html" title="Part Extrude/it">Extrude</a>, <a href="../it/Part_Revolve.html" title="Part Revolve/it">Revolve</a>, <a href="../it/Part_Mirror.html" title="Part Mirror/it">Mirror</a>, <a href="../it/Part_Scale.html" title="Part Scale/it">Scale</a>, <a href="../it/Part_Fillet.html" title="Part Fillet/it">Fillet</a>, <a href="../it/Part_Chamfer.html" title="Part Chamfer/it">Chamfer</a>, <a href="../it/Part_MakeFace.html" title="Part MakeFace/it">Make face from wires</a>, <a href="../it/Part_RuledSurface.html" title="Part RuledSurface/it">Ruled Surface</a>, <a href="../it/Part_Loft.html" title="Part Loft/it">Loft</a>, <a href="../it/Part_Sweep.html" title="Part Sweep/it">Sweep</a>, <a href="../it/Part_Section.html" title="Part Section/it">Section</a>, <a href="../it/Part_CrossSections.html" title="Part CrossSections/it">Cross sections</a>, <a href="../it/Part_Offset.html" title="Part Offset/it">3D Offset</a>, <a href="../it/Part_Offset2D.html" title="Part Offset2D/it">2D Offset</a>, <a href="../it/Part_Thickness.html" title="Part Thickness/it">Thickness</a>, <a href="../it/Part_ProjectionOnSurface.html" title="Part ProjectionOnSurface/it">Projection on surface</a>, <a href="../it/Part_ColorPerFace.html" title="Part ColorPerFace/it">Color per face</a></li></ul>
+<ul><li><b>Creation and modification:</b> <a href="../it/Sketcher_NewSketch.html" title="Sketcher NewSketch/it">New Sketch</a>, <a href="../it/Part_Extrude.html" title="Part Extrude/it">Extrude</a>, <a href="../it/Part_Revolve.html" title="Part Revolve/it">Revolve</a>, <a href="../it/Part_Mirror.html" title="Part Mirror/it">Mirror</a>, <a href="../it/Part_Scale.html" title="Part Scale/it">Scale</a>, <a href="../it/Part_Fillet.html" title="Part Fillet/it">Fillet</a>, <a href="../it/Part_Chamfer.html" title="Part Chamfer/it">Chamfer</a>, <a href="../it/Part_MakeFace.html" title="Part MakeFace/it">Face From Wires</a>, <a href="../it/Part_RuledSurface.html" title="Part RuledSurface/it">Ruled Surface</a>, <a href="../it/Part_Loft.html" title="Part Loft/it">Loft</a>, <a href="../it/Part_Sweep.html" title="Part Sweep/it">Sweep</a>, <a href="../it/Part_Section.html" title="Part Section/it">Section</a>, <a href="../it/Part_CrossSections.html" title="Part CrossSections/it">Cross-Sections</a>, <a href="../it/Part_Offset.html" title="Part Offset/it">3D Offset</a>, <a href="../it/Part_Offset2D.html" title="Part Offset2D/it">2D Offset</a>, <a href="../it/Part_Thickness.html" title="Part Thickness/it">Thickness</a>, <a href="../it/Part_ProjectionOnSurface.html" title="Part ProjectionOnSurface/it">Project on Surface</a>, <a href="../it/Part_ColorPerFace.html" title="Part ColorPerFace/it">Appearance per Face</a></li></ul>
 <hr>
-<ul><li><b>Boolean:</b> <a href="../it/Part_Compound.html" title="Part Compound/it">Make compound</a>, <a href="../it/Part_ExplodeCompound.html" title="Part ExplodeCompound/it">Explode compound</a>, <a href="../it/Part_CompoundFilter.html" title="Part CompoundFilter/it">Compound Filter</a>, <a href="../it/Part_Boolean.html" title="Part Boolean/it">Boolean</a>, <a href="../it/Part_Cut.html" title="Part Cut/it">Cut</a>, <a href="../it/Part_Fuse.html" title="Part Fuse/it">Union</a>, <a href="../it/Part_Common.html" title="Part Common/it">Intersection</a>, <a href="../it/Part_JoinConnect.html" title="Part JoinConnect/it">Connect objects</a>, <a href="../it/Part_JoinEmbed.html" title="Part JoinEmbed/it">Embed object</a>, <a href="../it/Part_JoinCutout.html" title="Part JoinCutout/it">Cutout for object</a>, <a href="../it/Part_BooleanFragments.html" title="Part BooleanFragments/it">Boolean fragments</a>, <a href="../it/Part_SliceApart.html" title="Part SliceApart/it">Slice apart</a>, <a href="../it/Part_Slice.html" title="Part Slice/it">Slice to compound</a>, <a href="../it/Part_XOR.html" title="Part XOR/it">Boolean XOR</a>, <a href="../it/Part_CheckGeometry.html" title="Part CheckGeometry/it">Check geometry</a>, <a href="../it/Part_Defeaturing.html" title="Part Defeaturing/it">Defeaturing</a></li></ul>
+<ul><li><b>Boolean:</b> <a href="../it/Part_Compound.html" title="Part Compound/it">Compound</a>, <a href="../it/Part_ExplodeCompound.html" title="Part ExplodeCompound/it">Explode Compound</a>, <a href="../it/Part_CompoundFilter.html" title="Part CompoundFilter/it">Compound Filter</a>, <a href="../it/Part_Boolean.html" title="Part Boolean/it">Boolean Operation</a>, <a href="../it/Part_Cut.html" title="Part Cut/it">Cut</a>, <a href="../it/Part_Fuse.html" title="Part Fuse/it">Union</a>, <a href="../it/Part_Common.html" title="Part Common/it">Intersection</a>, <a href="../it/Part_JoinConnect.html" title="Part JoinConnect/it">Connect Shapes</a>, <a href="../it/Part_JoinEmbed.html" title="Part JoinEmbed/it">Embed Shapes</a>, <a href="../it/Part_JoinCutout.html" title="Part JoinCutout/it">Cutout Shape</a>, <a href="../it/Part_BooleanFragments.html" title="Part BooleanFragments/it">Boolean Fragments</a>, <a href="../it/Part_SliceApart.html" title="Part SliceApart/it">Slice Apart</a>, <a href="../it/Part_Slice.html" title="Part Slice/it">Slice to Compound</a>, <a href="../it/Part_XOR.html" title="Part XOR/it">Boolean XOR</a>, <a href="../it/Part_CheckGeometry.html" title="Part CheckGeometry/it">Check Geometry</a>, <a href="../it/Part_Defeaturing.html" title="Part Defeaturing/it">Defeaturing</a></li></ul>
 <hr>
-<ul><li><b>Other tools:</b> <a href="../it/Part_Import.html" title="Part Import/it">Import CAD file</a>, <a href="../it/Part_Export.html" title="Part Export/it">Export CAD file</a>, <a href="../it/Part_BoxSelection.html" title="Part BoxSelection/it">Box selection</a>, <a href="../it/Part_ShapeFromMesh.html" title="Part ShapeFromMesh/it">Create shape from mesh</a>, <a href="../it/Part_PointsFromMesh.html" title="Part PointsFromMesh/it">Create points object from geometry</a>, <a href="../it/Part_MakeSolid.html" title="Part MakeSolid/it">Convert to solid</a>, <a href="../it/Part_ReverseShape.html" title="Part ReverseShape/it">Reverse shapes</a>, <a href="../it/Part_SimpleCopy.html" title="Part SimpleCopy/it">Create simple copy</a>, <a href="../it/Part_TransformedCopy.html" title="Part TransformedCopy/it">Create transformed copy</a>, <a href="../it/Part_ElementCopy.html" title="Part ElementCopy/it">Create shape element copy</a>, <a href="../it/Part_RefineShape.html" title="Part RefineShape/it">Refine shape</a>, <a href="../index.php?title=Part_ToleranceSet/it&amp;action=edit&amp;redlink=1.html" class="new" title="Part ToleranceSet/it (page does not exist)">Set tolerance</a>, <a href="../it/Part_SectionCut.html" title="Part SectionCut/it">Persistent section cut</a>,  <a href="../it/Part_EditAttachment.html" title="Part EditAttachment/it">Attachment&hellip;</a></li></ul>
+<ul><li><b>Other tools:</b> <a href="../it/Part_BoxSelection.html" title="Part BoxSelection/it">Box Selection</a>, <a href="../it/Part_ShapeFromMesh.html" title="Part ShapeFromMesh/it">Shape From Mesh</a>, <a href="../it/Part_PointsFromMesh.html" title="Part PointsFromMesh/it">Points From Shape</a>, <a href="../it/Part_MakeSolid.html" title="Part MakeSolid/it">Convert to Solid</a>, <a href="../it/Part_ReverseShape.html" title="Part ReverseShape/it">Reverse Shapes</a>, <a href="../it/Part_SimpleCopy.html" title="Part SimpleCopy/it">Simple Copy</a>, <a href="../it/Part_TransformedCopy.html" title="Part TransformedCopy/it">Transformed Copy</a>, <a href="../it/Part_ElementCopy.html" title="Part ElementCopy/it">Shape Element Copy</a>, <a href="../it/Part_RefineShape.html" title="Part RefineShape/it">Refine Shape</a>, <a href="../index.php?title=Part_ToleranceSet/it&amp;action=edit&amp;redlink=1.html" class="new" title="Part ToleranceSet/it (page does not exist)">Set Tolerance</a>, <a href="../it/Part_SectionCut.html" title="Part SectionCut/it">Persistent Section Cut</a>,  <a href="../it/Part_EditAttachment.html" title="Part EditAttachment/it">Attachment</a></li></ul>
 <hr>
 <ul><li><b>Preferences:</b> <a href="../it/PartDesign_Preferences.html" title="PartDesign Preferences/it">Preferences</a>, <a href="../it/Fine-tuning.html" title="Fine-tuning/it">Fine tuning</a></li></ul></div>
     </div></div>
@@ -155,35 +153,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260101214148
+Cached time: 20260118124442
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.109 seconds
-Real time usage: 0.219 seconds
-Preprocessor visited node count: 685/1000000
-Post&#8208;expand include size: 18216/2097152 bytes
-Template argument size: 5881/2097152 bytes
+CPU time usage: 0.107 seconds
+Real time usage: 0.166 seconds
+Preprocessor visited node count: 682/1000000
+Post&#8208;expand include size: 17932/2097152 bytes
+Template argument size: 5737/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 3/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4649/5000000 bytes
+Unstrip post&#8208;expand size: 4664/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.003      1 -total
- 24.47%   10.032      6 Template:PropertyData
- 18.63%    7.638      6 Template:Variable
- 16.46%    6.750      2 Template:TitleProperty
- 13.17%    5.399      1 Template:Part_Tools_navi/it
- 11.28%    4.626      2 Template:Docnav/it
-  9.60%    3.936      1 Template:Userdocnavi/it
-  8.81%    3.614      2 Template:Navigation_menu_2
-  7.24%    2.970      1 Template:GuiCommand/it
-  7.13%    2.924     14 Template:Incode
+100.00%   39.315      1 -total
+ 21.21%    8.340      1 Template:Part_Tools_navi/it
+ 19.38%    7.619      6 Template:PropertyData
+ 13.28%    5.219      2 Template:Navigation_menu_2
+ 13.02%    5.120      6 Template:Variable
+ 12.35%    4.857      1 Template:Userdocnavi/it
+ 11.19%    4.401      2 Template:TitleProperty
+  8.87%    3.489      2 Template:Code
+  8.23%    3.235      7 Template:Value
+  7.40%    2.910      1 Template:GuiCommand/it
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:10987-0!canonical and timestamp 20260101214148 and revision id 1725365. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:10987-0!canonical and timestamp 20260118124442 and revision id 1740465. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
